Proyecto Traductor/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> parrafo
Rule 1     parrafo -> frases
Rule 2     frases -> frases oracion
Rule 3     frases -> oracion
Rule 4     oracion -> SUJETO VERBOPRESENTE OBJETO
Rule 5     oracion -> SUJETO VERBOPASADO OBJETO
Rule 6     oracion -> SUJETO VERBOFUTURO OBJETO

Terminals, with rules where they appear

OBJETO               : 4 5 6
SUJETO               : 4 5 6
VERBOFUTURO          : 6
VERBOPASADO          : 5
VERBOPRESENTE        : 4
error                : 

Nonterminals, with rules where they appear

frases               : 1 2
oracion              : 2 3
parrafo              : 0

Parsing method: LALR

state 0

    (0) S' -> . parrafo
    (1) parrafo -> . frases
    (2) frases -> . frases oracion
    (3) frases -> . oracion
    (4) oracion -> . SUJETO VERBOPRESENTE OBJETO
    (5) oracion -> . SUJETO VERBOPASADO OBJETO
    (6) oracion -> . SUJETO VERBOFUTURO OBJETO

    SUJETO          shift and go to state 4

    parrafo                        shift and go to state 1
    frases                         shift and go to state 2
    oracion                        shift and go to state 3

state 1

    (0) S' -> parrafo .



state 2

    (1) parrafo -> frases .
    (2) frases -> frases . oracion
    (4) oracion -> . SUJETO VERBOPRESENTE OBJETO
    (5) oracion -> . SUJETO VERBOPASADO OBJETO
    (6) oracion -> . SUJETO VERBOFUTURO OBJETO

    $end            reduce using rule 1 (parrafo -> frases .)
    SUJETO          shift and go to state 4

    oracion                        shift and go to state 5

state 3

    (3) frases -> oracion .

    SUJETO          reduce using rule 3 (frases -> oracion .)
    $end            reduce using rule 3 (frases -> oracion .)


state 4

    (4) oracion -> SUJETO . VERBOPRESENTE OBJETO
    (5) oracion -> SUJETO . VERBOPASADO OBJETO
    (6) oracion -> SUJETO . VERBOFUTURO OBJETO

    VERBOPRESENTE   shift and go to state 6
    VERBOPASADO     shift and go to state 7
    VERBOFUTURO     shift and go to state 8


state 5

    (2) frases -> frases oracion .

    SUJETO          reduce using rule 2 (frases -> frases oracion .)
    $end            reduce using rule 2 (frases -> frases oracion .)


state 6

    (4) oracion -> SUJETO VERBOPRESENTE . OBJETO

    OBJETO          shift and go to state 9


state 7

    (5) oracion -> SUJETO VERBOPASADO . OBJETO

    OBJETO          shift and go to state 10


state 8

    (6) oracion -> SUJETO VERBOFUTURO . OBJETO

    OBJETO          shift and go to state 11


state 9

    (4) oracion -> SUJETO VERBOPRESENTE OBJETO .

    SUJETO          reduce using rule 4 (oracion -> SUJETO VERBOPRESENTE OBJETO .)
    $end            reduce using rule 4 (oracion -> SUJETO VERBOPRESENTE OBJETO .)


state 10

    (5) oracion -> SUJETO VERBOPASADO OBJETO .

    SUJETO          reduce using rule 5 (oracion -> SUJETO VERBOPASADO OBJETO .)
    $end            reduce using rule 5 (oracion -> SUJETO VERBOPASADO OBJETO .)


state 11

    (6) oracion -> SUJETO VERBOFUTURO OBJETO .

    SUJETO          reduce using rule 6 (oracion -> SUJETO VERBOFUTURO OBJETO .)
    $end            reduce using rule 6 (oracion -> SUJETO VERBOFUTURO OBJETO .)

